--- a/src/docs/index.adoc
+++ b/src/docs/index.adoc
@@ -5,8 +5,10 @@ endif::[]
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
-:toclevels: 4
-== 공통 status code
+:toclevels: 2
+
+=== Common Responses
+==== Common Status Codes
 ```java
 # 생성
 ## status code: 201
@@ -22,7 +24,7 @@ endif::[]
 ## status code: 204
 ```
 
-== 공통예외
+==== Common Exceptions
 ```java
 # 클라이언트 입력 예외
 ## status code: 400
@@ -35,116 +37,124 @@ endif::[]
 ```
 
 == User (사용자)
-=== 사용자 가입 - 성공
+=== 사용자 가입
+==== 성공
+===== Request
 include::{snippets}/user-create/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/user-create/http-response.adoc[]
 
-=== 사용자 가입 - 실패
-==== Request
+==== 실패
+===== Request
 include::{snippets}/user-create-fail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/user-create-fail/http-response.adoc[]
 
-
-=== 사용자 조회 - 성공
-==== Request
+=== 사용자 조회
+==== 성공
+===== Request
 include::{snippets}/user-detail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/user-detail/http-response.adoc[]
 
-=== 사용자 조회 - 실패
-==== Request
+==== 실패
+===== Request
 include::{snippets}/user-detail-fail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/user-detail-fail/http-response.adoc[]
 
-=== 사용자 업데이트 - 성공
-==== Request
+=== 사용자 업데이트
+==== 성공
+===== Request
 include::{snippets}/user-update/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/user-update/http-response.adoc[]
+
+==== 실패
+===== Request
+include::{snippets}/user-update-fail/http-request.adoc[]
+
+===== Response
+include::{snippets}/user-update-fail/http-response.adoc[]
+
+=== 사용자 삭제
+==== 성공
+===== Request
+include::{snippets}/user-delete/http-request.adoc[]
+
+===== Response
+include::{snippets}/user-delete/http-response.adoc[]
+
+==== 실패
+===== Request
+include::{snippets}/user-delete-fail/http-request.adoc[]
+
+===== Response
+include::{snippets}/user-delete-fail/http-response.adoc[]
 
 == Post (게시글)
 
-=== 게시글 생성 - 성공
-==== Request
+=== 게시글 생성
+==== 성공
+===== Request
 include::{snippets}/post-create/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-create/http-response.adoc[]
 
-=== 게시글 생성 - 실패
-==== Request
+==== 실패
+===== Request
 include::{snippets}/post-create-fail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-create-fail/http-response.adoc[]
 
-=== 게시글 업데이트 - 성공
-==== Request
+=== 게시글 업데이트
+==== 성공
+===== Request
 include::{snippets}/post-update/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-update/http-response.adoc[]
 
-=== 게시글 업데이트 - 실패
-==== Request
+==== 실패
+===== Request
 include::{snippets}/post-update-fail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-update-fail/http-response.adoc[]
 
-=== 게시글 조회 - 성공
-==== Request
+=== 게시글 조회
+==== 성공
+===== Request
 include::{snippets}/post-find/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-find/http-response.adoc[]
 
-=== 게시글 조회 - 실패
-==== Request
+==== 실패
+===== Request
 include::{snippets}/post-find-fail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-find-fail/http-response.adoc[]
 
-=== 게시글 삭제 - 성공
-==== Request
+=== 게시글 삭제
+==== 성공
+===== Request
 include::{snippets}/post-delete/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-delete/http-response.adoc[]
 
-=== 게시글 삭제 - 실패
-==== Request
+==== 실패
+===== Request
 include::{snippets}/post-delete-fail/http-request.adoc[]
 
-==== Response
+===== Response
 include::{snippets}/post-delete-fail/http-response.adoc[]
-=======
-=== 사용자 업데이트 - 실패
-==== Request
-include::{snippets}/user-update-fail/http-request.adoc[]
-
-==== Response
-include::{snippets}/user-update-fail/http-response.adoc[]
-
-=== 사용자 삭제 - 성공
-==== Request
-include::{snippets}/user-delete/http-request.adoc[]
-
-==== Response
-include::{snippets}/user-delete/http-response.adoc[]
-
-=== 사용자 삭제 - 실패
-==== Request
-include::{snippets}/user-delete-fail/http-request.adoc[]
-
-==== Response
-include::{snippets}/user-delete-fail/http-response.adoc[]
